feat(fich): логика работы с полезными и вредными привычками
