# internal/models/habit.go
@@ -2,24 +2,31 @@ package models
 
 import "time"
 
+type HabitFormat string
+
+const (
+	HabitFormatTime   HabitFormat = "time"
+	HabitFormatCount  HabitFormat = "count"
+	HabitFormatBinary HabitFormat = "binary"
+)
+
 type HabitType string
 
 const (
-	HabitTypeTime   HabitType = "time"
-	HabitTypeCount  HabitType = "count"
-	HabitTypeBinary HabitType = "binary"
+	HabitTypeBeneficial HabitType = "beneficial"
+	HabitTypeHarmful    HabitType = "harmful"
 )
 
 type Habit struct {
-	ID           int64     `json:"id"`
-	UserID       int64     `json:"user_id"`
-	Title        string    `json:"title"`
-	Type         HabitType `json:"type"`
-	Unit         string    `json:"unit"`
-	Value        int       `json:"value"`
-	IsActive     bool      `json:"is_active"`
-	IsDone       bool      `json:"is_done"`
-	IsBeneficial bool      `json:"is_beneficial"`
-	Series       int       `json:"series"`
-	CreatedAt    time.Time `json:"created_at"`
+	ID         int64       `json:"id"`
+	UserID     int64       `json:"user_id"`
+	Title      string      `json:"title"`
+	Format     HabitFormat `json:"format"`
+	Unit       string      `json:"unit"`
+	Value      int         `json:"value"`
+	IsActive   bool        `json:"is_active"`
+	IsDone     bool        `json:"is_done"`
+	Type       HabitType   `json:"type"`
+	Series     int         `json:"series"`
+	CreatedAt  time.Time  `json:"created_at"`
 }
